// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AJV latest should output error with codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> must be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  2 |   "type": "doc",
  3 |   "version": 1,
> 4 |   "content": [{ "type": "paragarph" }]
    |                         ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  5 | }
  6 |"
`;

exports[`AJV latest should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> must be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  4 |   "content": [
  5 |     {
> 6 |       "type": "paragarph"
    |               ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  7 |     }
  8 |   ]
  9 | }"
`;

exports[`AJV latest should output proper error for enumeration 1`] = `
"<red><bold>ENUM</intensity></color><red> must be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }"
`;

exports[`AJV latest should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</intensity></color><red> must be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }

<red><bold>TYPE</intensity></color><red> must be array</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>type</color> must be array
  3 | }

<red><bold>ANYOF</intensity></color><red> must match a schema in anyOf</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>anyOf</color> must match a schema in anyOf
  3 | }"
`;

exports[`AJV v4 should output error with codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  2 |   "type": "doc",
  3 |   "version": 1,
> 4 |   "content": [{ "type": "paragarph" }]
    |                         ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  5 | }
  6 |"
`;

exports[`AJV v4 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  4 |   "content": [
  5 |     {
> 6 |       "type": "paragarph"
    |               ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  7 |     }
  8 |   ]
  9 | }"
`;

exports[`AJV v4 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }"
`;

exports[`AJV v4 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }

<red><bold>TYPE</intensity></color><red> should be array</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>type</color> should be array
  3 | }

<red><bold>ANYOF</intensity></color><red> should match some schema in anyOf</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>anyOf</color> should match some schema in anyOf
  3 | }"
`;

exports[`AJV v5 should output error with codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  2 |   "type": "doc",
  3 |   "version": 1,
> 4 |   "content": [{ "type": "paragarph" }]
    |                         ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  5 | }
  6 |"
`;

exports[`AJV v5 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  4 |   "content": [
  5 |     {
> 6 |       "type": "paragarph"
    |               ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  7 |     }
  8 |   ]
  9 | }"
`;

exports[`AJV v5 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }"
`;

exports[`AJV v5 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }

<red><bold>TYPE</intensity></color><red> should be array</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>type</color> should be array
  3 | }

<red><bold>ANYOF</intensity></color><red> should match some schema in anyOf</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>anyOf</color> should match some schema in anyOf
  3 | }"
`;

exports[`AJV v6 should output error with codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  2 |   "type": "doc",
  3 |   "version": 1,
> 4 |   "content": [{ "type": "paragarph" }]
    |                         ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  5 | }
  6 |"
`;

exports[`AJV v6 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  4 |   "content": [
  5 |     {
> 6 |       "type": "paragarph"
    |               ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  7 |     }
  8 |   ]
  9 | }"
`;

exports[`AJV v6 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }"
`;

exports[`AJV v6 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }

<red><bold>TYPE</intensity></color><red> should be array</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>type</color> should be array
  3 | }

<red><bold>ANYOF</intensity></color><red> should match some schema in anyOf</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>anyOf</color> should match some schema in anyOf
  3 | }"
`;

exports[`AJV v7 should output error with codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  2 |   "type": "doc",
  3 |   "version": 1,
> 4 |   "content": [{ "type": "paragarph" }]
    |                         ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  5 | }
  6 |"
`;

exports[`AJV v7 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  4 |   "content": [
  5 |     {
> 6 |       "type": "paragarph"
    |               ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  7 |     }
  8 |   ]
  9 | }"
`;

exports[`AJV v7 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }"
`;

exports[`AJV v7 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</intensity></color><red> should be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }

<red><bold>TYPE</intensity></color><red> should be array</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>type</color> should be array
  3 | }

<red><bold>ANYOF</intensity></color><red> should match some schema in anyOf</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>anyOf</color> should match some schema in anyOf
  3 | }"
`;

exports[`AJV v8 should output error with codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> must be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  2 |   "type": "doc",
  3 |   "version": 1,
> 4 |   "content": [{ "type": "paragarph" }]
    |                         ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  5 | }
  6 |"
`;

exports[`AJV v8 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</intensity></color><red> must be equal to one of the allowed values</color>
<red>(paragraph, codeBlock, blockquote)</color>

  4 |   "content": [
  5 |     {
> 6 |       "type": "paragarph"
    |               ^^^^^^^^^^^ 👈🏽  Did you mean <brightMagenta>paragraph</color> here?
  7 |     }
  8 |   ]
  9 | }"
`;

exports[`AJV v8 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</intensity></color><red> must be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }"
`;

exports[`AJV v8 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</intensity></color><red> must be equal to one of the allowed values</color>
<red>(foo, bar)</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  Did you mean <brightMagenta>bar</color> here?
  3 | }

<red><bold>TYPE</intensity></color><red> must be array</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>type</color> must be array
  3 | }

<red><bold>ANYOF</intensity></color><red> must match a schema in anyOf</color>

  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ 👈🏽  <brightMagenta>anyOf</color> must match a schema in anyOf
  3 | }"
`;
